--- a/SitioWebCarrera/src/app/pages/quienesSomos/quienesSomos-page.component.html
+++ b/SitioWebCarrera/src/app/pages/quienesSomos/quienesSomos-page.component.html
@@ -107,7 +107,7 @@
     metodologías modernas de desarrollo y enfrentar retos vinculados con inteligencia artificial,
     redes, seguridad informática y otras áreas de la computación.
   </p>
-  <a href="https://www.unistmo.edu.mx/web/p_ensenanza/software.html" class="btn">Ver Plan de Estudios</a>
+  <a href="./app/pages/plamEstudio/planEstudio-page.component.html" class="btn">Ver Plan de Estudios</a>
 </section>
 
 </body>
