--- a/SitioWebCarrera/src/app/pages/inicio/inicio-pages.component.css
+++ b/SitioWebCarrera/src/app/pages/inicio/inicio-pages.component.css
@@ -44,7 +44,7 @@ body {
 
     width: 100%;
     background: linear-gradient(rgba(10, 25, 47, 0.6), rgba(10, 25, 47, 0.6)),
-     url('/assets/img/FondoUistmo.png');
+     url('../../../assets/img/FondoUistmo.png');
 
     background-size: cover;
     background-position: center;
