--- a/SitioWebCarrera/src/app/pages/quienesSomos/quienesSomos-page.component.html
+++ b/SitioWebCarrera/src/app/pages/quienesSomos/quienesSomos-page.component.html
@@ -91,8 +91,5 @@
   </p>
 
   <!-- BOTÓN QUE SÍ FUNCIONA CON ANGULAR ROUTER -->
- <button type="button" [routerLink]="'/planEstudios'" class="btn">
-  Ver Plan de Estudios
-</button>
-
+  <a routerLink="/planEstudios" class="btn">Ver Plan de Estudios</a>
 </section>
