cambio en servicio translate
Se cambía el tipo de variale y nombre del servicio que se manda a llamar en el html

--- a/SitioWebCarrera/src/app/shared/components/navbar/navbar-shared.component.html
+++ b/SitioWebCarrera/src/app/shared/components/navbar/navbar-shared.component.html
@@ -75,7 +75,7 @@
           <div class="idiomas">
             <button
               (click)="cambiarIdioma('es')"
-              [class.active]="translationService.currentLang() === 'es'">
+              [class.active]="translateService.currentLang === 'es'">
               Español
             </button>
 
