--- a/SitioWebCarrera/src/app/pages/aspirantes/aspirantes-pages.component.html
+++ b/SitioWebCarrera/src/app/pages/aspirantes/aspirantes-pages.component.html
@@ -92,23 +92,25 @@
   </section>
 
   <!-- CTA -->
-  <section class="cta">
-    <h2>¿Necesitas más información?</h2>
-    <p>
-      Nuestro equipo de atención a aspirantes está listo para resolver todas tus
-      dudas sobre el proceso de admisión.
-    </p>
+ <section class="cta">
+  <h2>¿Necesitas más información?</h2>
+  <p>
+    Nuestro equipo de atención a aspirantes está listo para resolver todas tus
+    dudas sobre el proceso de admisión.
+  </p>
 
-<div class="cta-botones">
-  <a href="https://www.unistmo.edu.mx/web/p_ensenanza/ingreso/FORMATO_SOLICITUD_FICHA_LICENCIATURA.pdf" class="btn-cta">
-    Contactar Admisiones
-  </a>
+  <div class="cta-botones">
+    <a href="https://www.unistmo.edu.mx/web/p_ensenanza/ingreso/FORMATO_SOLICITUD_FICHA_LICENCIATURA.pdf"
+       class="btn-cta">
+      Contactar Admisiones
+    </a>
 
-  <a href="https://www.unistmo.edu.mx/web/p_ensenanza/ingreso/FORMATO_SOLICITUD_FICHA_LICENCIATURA.pdf" class="btn-cta" target="_blank">
-    Descargar Guía
-  </a>
-</div>
-
-  </section>
+    <a href="https://www.unistmo.edu.mx/web/p_ensenanza/ingreso/FORMATO_SOLICITUD_FICHA_LICENCIATURA.pdf"
+       class="btn-cta"
+       target="_blank">
+      Descargar Guía
+    </a>
+  </div>
+</section>
 
 </section>
