--- a/SitioWebCarrera/src/app/shared/components/navbar/navbar-shared.component.html
+++ b/SitioWebCarrera/src/app/shared/components/navbar/navbar-shared.component.html
@@ -97,6 +97,18 @@
             </a>
           </li>
 
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              routerLink="/egresados"
+              [class.active-link]="isActive('/egresados')"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarInstitucional"
+            >
+              Egresados
+            </a>
+          </li>
+
         </ul>
 
 
